refactor: enhance CourseMapper to streamline schedule mapping using CourseScheduleMapper